--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Welcome to My Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<title>Welcome to My Portfolio</title>	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,400,900" rel="stylesheet">
 	<script src="https://use.fontawesome.com/4b72a2e43d.js"></script>
@@ -45,7 +45,7 @@
 
 	<div class="container">
 		<div id="page-start" class="row">
-			<div class="col-md-12">
+			<div class="transparent-div jumbotron">
 				<h1 class="right-align thin-font header">
 					<a href="https://www.freecodecamp.com/mr2much" target="_blank">ANUBIS LOCKWARD</a>
 				</h1>
